fixed skeleton cell display and alignment on mobile

--- a/src/components/AddressRow/styles.module.scss
+++ b/src/components/AddressRow/styles.module.scss
@@ -33,7 +33,6 @@ td.rank_cell {
     align-items: center;
 
     span.first {
-      font-size: 2.438rem;
       margin-right: 0.25rem;
 
       @media (max-width: 37.5em) {
@@ -42,6 +41,10 @@ td.rank_cell {
 
       @media (min-width: 37.5em) {
         font-size: 2.063rem;
+      }
+
+      @media (min-width: 75em) {
+        font-size: 2.438rem;
       }
     }
 
@@ -78,6 +81,16 @@ td.image_cell {
   padding: 0;
   min-width: 5.75rem;
   min-height: 5.75rem;
+
+  .image_wrapper_skel {
+    width: 100%;
+    height: 5.75rem;
+
+    @media (max-width: 37.5em) {
+      width: 100%;
+      height: 4.813rem;
+    }
+  }
 
   .image_cell_skel {
     width: 100%;
